[project]
name = "ai-agent-app-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-google-genai>=0.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "todoist-api-python>=2.2.0",
]
